* Wed May 10 2017 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.3.0-1)
- stdout/err log into a file during execution of script.
- Thamway USB devices operated with cyusb3.sys
- (experimental) support for Thamway QAM pulser and real-time DSO for digital demodulation.

* Thu Jan 19 2017 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.2.8-1)
- Lakeshore 350 temp. controller

* Fri Dec 9 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.2.7-1)
- ezusb: works well in OSX
- OSX: disables AppNap and machine sleep.

* Fri Nov 11 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.2.6-1)
- Enables NI488.2, and USB interfaces for thamway instruments on OSX
- xtime.cpp: Gets rid of spin lock again.
- thamwaydso: Fixed for channel names and init. valuse of records, timewidth.
- Now compiles with GSL > 2.0
- OSX: uses standard glu.h

* Sun Nov 6 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.2.5-1)
- Fixed unstability that appeared as of 4.2.1, regarding memory leaks of dwm
- Fixed priority issue for test driver.

* Sun Nov 6 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.2.4-1)
- Reduces CPU usgae

* Fri Sep 2 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.2.3-1)
- NIDAQDSO: Fix for changes made at 4.2.2
- NIDAQ: can be placed directly at C:\

* Thu Sep 1 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.2.2-1)
- DSO using Digilent Waveform

* Sun Aug 7 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.2.1-1)
- Roll backs some of buggy transaction.h from 4.1.14.
- Repainting strategy of graph is improved.
- Refactors signals.
- Fix bugs for f-sweep NMR specrtrum regarding autotuning.

* Wed Aug 3 2016 Kentaro Kitagawa <kitagawa@phys.s.u-tokyo.ac.jp>
- (4.2.0-1)
- Fix severe bugs regarding SSE on mingw32. adds -mstackrealign compile option.
- Uses QOpenGLWidget for QT > 5.4 instead of the obsolete QGLWidget. Adds -lopengl32 -lglut32 for mingw32.
- Abondons nooverpaint/nodirectrender options.