@@ -56,7 +56,6 @@
 
 #if defined __WIN32__ || defined WINDOWS || defined _WIN32
     #define USE_QTHREAD
-    #define USE_STD_THREAD
     #include <QThread>
     #include <thread>
     DECLSPEC_KAME int mlock(const void *addr, size_t len);
